LAB_12/Microblaze/Microblaze.sdk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
02:58:01 **** Build of project microblaze_FFT_bsp ****
make -k all 
"Running Make include in microblaze_0/libsrc/axidma_v9_9/src"
make -C microblaze_0/libsrc/axidma_v9_9/src -s include  "SHELL=CMD" "COMPILER=mb-gcc" "ARCHIVER=mb-ar" "COMPILER_FLAGS=  -O2 -c -mcpu=v11.0 -mlittle-endian -mxl-soft-mul" "EXTRA_COMPILER_FLAGS=-ffunction-sections -fdata-sections -Wall -Wextra"
"Running Make include in microblaze_0/libsrc/bram_v4_3/src"
make -C microblaze_0/libsrc/bram_v4_3/src -s include  "SHELL=CMD" "COMPILER=mb-gcc" "ARCHIVER=mb-ar" "COMPILER_FLAGS=  -O2 -c -mcpu=v11.0 -mlittle-endian -mxl-soft-mul" "EXTRA_COMPILER_FLAGS=-ffunction-sections -fdata-sections -Wall -Wextra"
"Running Make include in microblaze_0/libsrc/cpu_v2_9/src"
make -C microblaze_0/libsrc/cpu_v2_9/src -s include  "SHELL=CMD" "COMPILER=mb-gcc" "ARCHIVER=mb-ar" "COMPILER_FLAGS=  -O2 -c -mcpu=v11.0 -mlittle-endian -mxl-soft-mul" "EXTRA_COMPILER_FLAGS=-ffunction-sections -fdata-sections -Wall -Wextra"
"Running Make include in microblaze_0/libsrc/standalone_v7_0/src"
make -C microblaze_0/libsrc/standalone_v7_0/src -s include  "SHELL=CMD" "COMPILER=mb-gcc" "ARCHIVER=mb-ar" "COMPILER_FLAGS=  -O2 -c -mcpu=v11.0 -mlittle-endian -mxl-soft-mul" "EXTRA_COMPILER_FLAGS=-ffunction-sections -fdata-sections -Wall -Wextra"
"Running Make libs in microblaze_0/libsrc/axidma_v9_9/src"
make -C microblaze_0/libsrc/axidma_v9_9/src -s libs  "SHELL=CMD" "COMPILER=mb-gcc" "ARCHIVER=mb-ar" "COMPILER_FLAGS=  -O2 -c -mcpu=v11.0 -mlittle-endian -mxl-soft-mul" "EXTRA_COMPILER_FLAGS=-ffunction-sections -fdata-sections -Wall -Wextra"
"Compiling axidma"
mb-ar: creating ../../../lib/libxil.a
"Running Make libs in microblaze_0/libsrc/bram_v4_3/src"
make -C microblaze_0/libsrc/bram_v4_3/src -s libs  "SHELL=CMD" "COMPILER=mb-gcc" "ARCHIVER=mb-ar" "COMPILER_FLAGS=  -O2 -c -mcpu=v11.0 -mlittle-endian -mxl-soft-mul" "EXTRA_COMPILER_FLAGS=-ffunction-sections -fdata-sections -Wall -Wextra"
"Compiling bram"
"Running Make libs in microblaze_0/libsrc/cpu_v2_9/src"
make -C microblaze_0/libsrc/cpu_v2_9/src -s libs  "SHELL=CMD" "COMPILER=mb-gcc" "ARCHIVER=mb-ar" "COMPILER_FLAGS=  -O2 -c -mcpu=v11.0 -mlittle-endian -mxl-soft-mul" "EXTRA_COMPILER_FLAGS=-ffunction-sections -fdata-sections -Wall -Wextra"
"Compiling cpu"
"Running Make libs in microblaze_0/libsrc/standalone_v7_0/src"
make -C microblaze_0/libsrc/standalone_v7_0/src -s libs  "SHELL=CMD" "COMPILER=mb-gcc" "ARCHIVER=mb-ar" "COMPILER_FLAGS=  -O2 -c -mcpu=v11.0 -mlittle-endian -mxl-soft-mul" "EXTRA_COMPILER_FLAGS=-ffunction-sections -fdata-sections -Wall -Wextra"
"Compiling standalone";
inbyte.c: In function 'inbyte':
inbyte.c:11:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
outbyte.c: In function 'outbyte':
outbyte.c:11:19: warning: unused parameter 'c' [-Wunused-parameter]
 void outbyte(char c) {
              ~~~~~^
microblaze_sleep.c:77:9: note: #pragma message: For the sleep routines, assembly instructions are used
 #pragma message ("For the sleep routines, assembly instructions are used")
         ^~~~~~~
'Finished building libraries'

**** Build of configuration Debug for project microblaze_FFT ****

Nothing to build for project microblaze_FFT
02:58:31 **** Auto Build of configuration Debug for project microblaze_FFT ****
make all 
'Building file: ../src/main.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -I../../microblaze_FFT_bsp/microblaze_0/include -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
'Finished building: ../src/main.c'
' '
'Building target: microblaze_FFT.elf'
'Invoking: MicroBlaze gcc linker'
mb-gcc -Wl,-T -Wl,../src/lscript.ld -L../../microblaze_FFT_bsp/microblaze_0/lib -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -Wl,--gc-sections -o "microblaze_FFT.elf"  ./src/main.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
d:/vivado/sdk/2019.1/gnu/microblaze/nt/bin/../lib/gcc/microblaze-xilinx-elf/8.2.0/../../../../microblaze-xilinx-elf/bin/ld.exe: d:/vivado/sdk/2019.1/gnu/microblaze/nt/bin/../lib/gcc/microblaze-xilinx-elf/8.2.0/../../../../microblaze-xilinx-elf/lib/le/crtinit.o: in function `_crtinit':
(.text+0x78): undefined reference to `main'
collect2.exe: error: ld returned 1 exit status
make: *** [makefile:38: microblaze_FFT.elf] Error 1
03:03:58 **** Auto Build of configuration Debug for project microblaze_FFT ****
make all 
'Building file: ../src/main.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -I../../microblaze_FFT_bsp/microblaze_0/include -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'main':
../src/main.c:20:2: error: invalid suffix "a0000" on integer constant
  8a0000,0x423c0000,0x42c00000,0x42300000,0x41400000,0x42c00000,0x41880000,0x42440000,0x42680000};
  ^~~~~~
../src/main.c:20:2: error: expected '}' before numeric constant
../src/main.c:19:31: note: to match this '{'
  const float FFT_input[2*N] = {0x41300000,0x41b80000,0x42000000,0x41200000,0x42b60000,0x42bc0000,0x41700000,0x42
                               ^
make: *** [src/subdir.mk:23: src/main.o] Error 1
03:06:06 **** Auto Build of configuration Debug for project microblaze_FFT ****
make all 
'Building file: ../src/main.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -I../../microblaze_FFT_bsp/microblaze_0/include -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
'Finished building: ../src/main.c'
' '
'Building target: microblaze_FFT.elf'
'Invoking: MicroBlaze gcc linker'
mb-gcc -Wl,-T -Wl,../src/lscript.ld -L../../microblaze_FFT_bsp/microblaze_0/lib -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -Wl,--gc-sections -o "microblaze_FFT.elf"  ./src/main.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
'Finished building target: microblaze_FFT.elf'
' '
'Invoking: MicroBlaze Print Size'
mb-size microblaze_FFT.elf  |tee "microblaze_FFT.elf.size"
   text	   data	    bss	    dec	    hex	filename
  17480	   1376	   3168	  22024	   5608	microblaze_FFT.elf
'Finished building: microblaze_FFT.elf.size'
' '
